# rust-activ-vscode-remote-container

./: Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: main.rs  test.rs
