[package]
name = "hello-world"
version = "0.1.0"
authors = ["johnny.liao@gmail.com <johnny.liao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
derive-new = "0.5"

serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"

[[bin]]
name = "test"
path = "src/test.rs"